--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -45,7 +45,7 @@
    "id": "09501afd-ae49-4274-bf4c-512a1187201a",
    "metadata": {},
    "source": [
-    "This page gives an overview of the inputs and outputs of the Qiskit Runtime primitives that execute workloads on IBM Quantum&trade; compute resources. These primitives provide you with the ability to efficiently define vectorized workloads by using a data structure known as a **Primitive Unified Bloc (PUB)**. These PUBs are the fundamental unit of work a QPU needs to execute these workloads. They are used as inputs to the [`run()`](../api/qiskit-ibm-runtime/estimator-v2#run) method for the Sampler and Estimator primitives, which execute the defined workload as a job. Then, after the job has completed, the results are returned in a format that is dependent on both the PUBs used as well as the runtime options specified from the Sampler or Estimator primitives."
+    "This page gives an overview of the inputs and outputs of the Qiskit Runtime primitives that execute workloads on IBM Quantum&trade; compute resources. These primitives provide you with the ability to efficiently define vectorized workloads by using a data structure known as a **Primitive Unified Bloc (PUB)**. These PUBs are the fundamental unit of work a QPU needs to execute these workloads. They are used as inputs to the [`run()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2#run) method for the Sampler and Estimator primitives, which execute the defined workload as a job. Then, after the job has completed, the results are returned in a format that is dependent on both the PUBs used as well as the runtime options specified from the Sampler or Estimator primitives."
    ]
   },
   {
@@ -56,7 +56,7 @@
     "<span id=\"pubs\"></span>\n",
     "## Overview of PUBs\n",
     "\n",
-    "When invoking a primitive's [`run()`](../api/qiskit-ibm-runtime/estimator-v2#run) method, the main argument that is required is a `list` of one or more tuples -- one for each circuit being executed by the primitive. Each of these tuples is considered a PUB, and the required elements of each tuple in the list depends on the the primitive used. The data provided to these tuples can also be arranged in a variety of shapes to provide flexibility in a workload through broadcasting -- the rules of which are described in a [following section](#broadcasting-rules).\n",
+    "When invoking a primitive's [`run()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2#run) method, the main argument that is required is a `list` of one or more tuples -- one for each circuit being executed by the primitive. Each of these tuples is considered a PUB, and the required elements of each tuple in the list depends on the the primitive used. The data provided to these tuples can also be arranged in a variety of shapes to provide flexibility in a workload through broadcasting -- the rules of which are described in a [following section](#broadcasting-rules).\n",
     "\n",
     "### Estimator PUB\n",
     "For the Estimator primitive, the format of the PUB should contain at most four values:\n",
@@ -90,14 +90,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit.circuit import Parameter, QuantumCircuit\n",
-    "from qiskit_ibm_runtime import (\n",
-    "    EstimatorV2 as Estimator,\n",
-    "    SamplerV2 as Sampler,\n",
-    ")\n",
+    "from qiskit.circuit import Parameter, QuantumCircuit, ClassicalRegister, QuantumRegister\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
+    "from qiskit.primitives.containers import BitArray\n",
+    "\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator, SamplerV2 as Sampler\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "# Instantiate runtime service and get\n",
@@ -118,7 +117,6 @@
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "transpiled_circuit = pm.run(circuit)\n",
     "layout = transpiled_circuit.layout\n",
-    "\n",
     "\n",
     "# Now define a sweep over parameter values, the last axis of dimension 2 is\n",
     "# for the two parameters \"a\" and \"b\"\n",
@@ -418,76 +416,155 @@
    "source": [
     "### Sampler output\n",
     "\n",
+    "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The databins of these `SamplerPubResult`s are dict-like objects that contain one or more `BitArray`s, each one storing the samples of the circuits attached to a particular `ClassicalRegister`. \n",
     "\n",
-    "The Sampler primitive outputs job results in a similar format, with the exception that each `DataBin` will contain one or more `BitArray` objects which store the samples of the circuit attached to a particular `ClassicalRegister`, typically one bitstring per shot. The attribute label for each bit array object depends on the `ClassicalRegisters` defined in the circuit being executed. The measurement data from these `BitArrays` can then be processed into a dictionary with key-value pairs corresponding to each bitstring measured (for example, '1011001') and the number of times (or counts) it was measured.\n",
-    "\n",
-    "For example, a circuit that has measurement instructions added by the [`QuantumCircuit.measure_all()`](../api/qiskit/qiskit.circuit.QuantumCircuit#measure_all) function possesses a classical register with the label *'meas'*. After execution, a count data dictionary can be created by executing:"
+    "The `get_counts` method returns a dictionary mapping the sampled measurement outcomes to their counts. For example, for a circuit with measurement instructions added by the [`QuantumCircuit.measure_all()`](../api/qiskit/qiskit.circuit.QuantumCircuit#measure_all), the counts can be access as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a2316ece-c1ef-49b9-ae07-860decb0747d",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add measurement instructions to the example circuit\n",
+    "# generate a ten-qubit GHZ circuit\n",
+    "circuit = QuantumCircuit(10)\n",
+    "circuit.h(0)\n",
+    "circuit.cx(range(0, 9), range(1, 10))\n",
+    "\n",
+    "# append measurements with the `measure_all` method\n",
     "circuit.measure_all()\n",
     "\n",
-    "# Transpile the circuit\n",
-    "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
+    "# transpile the circuit\n",
     "transpiled_circuit = pm.run(circuit)\n",
     "\n",
-    "# Create a PUB for the Sampler primitive using the same parameters defined earlier\n",
-    "sampler_pub = (transpiled_circuit, params)\n",
-    "\n",
-    "\n",
+    "# run the Sampler job and retrieve the results\n",
     "sampler = Sampler(mode=backend)\n",
-    "job = sampler.run([sampler_pub])\n",
-    "result = job.result()"
+    "job = sampler.run([transpiled_circuit])\n",
+    "result = job.result()\n",
+    "\n",
+    "# the databin contains one BitArray\n",
+    "data = result[0].data\n",
+    "print(f\"Databin: {data}\")\n",
+    "\n",
+    "# to access the BitArray, one can use the keyword \"meas\", which is the default\n",
+    "# name of the classical register when this is added by the `measure_all` method\n",
+    "array = data.meas\n",
+    "print(f\"BitArray: {array}\")\n",
+    "\n",
+    "# use the `get_counts` method to look up the results\n",
+    "counts = array.get_counts()\n",
+    "print(f\"Counts: {counts}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When a circuit contains more classical registers, the results are stored in different `BitArray`s. The following example modifies the previous snippet by splitting the classical register into two distinct registers:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f459cd09-3243-487c-9fc4-a8e7a5589e4e",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The result of the submitted job had 1 PUB and has a value:\n",
-      " PrimitiveResult([SamplerPubResult(data=DataBin(meas=BitArray(<shape=(100,), num_shots=4096, num_bits=2>), shape=(100,)), metadata={'circuit_metadata': {}})], metadata={'execution': {'execution_spans': ExecutionSpans([SliceSpan(<start='2025-01-21 13:01:31', stop='2025-01-21 13:04:14', size=409600>)])}, 'version': 2})\n",
-      "\n",
-      "The associated PubResult of this Sampler job has the following DataBins:\n",
-      " DataBin(meas=BitArray(<shape=(100,), num_shots=4096, num_bits=2>), shape=(100,))\n",
-      "\n",
-      "It has a key-value pair dict: \n",
-      "dict_items([('meas', BitArray(<shape=(100,), num_shots=4096, num_bits=2>))])\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "And the raw data can be converted to a bitstring-count format: \n",
-      "{'11': 105249, '01': 101186, '10': 101180, '00': 101985}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\n",
-    "    f\"The result of the submitted job had {len(result)} PUB and has a value:\\n {result}\\n\"\n",
+    "# generate a ten-qubit GHZ circuit with two classical registers\n",
+    "circuit = QuantumCircuit(\n",
+    "    qreg := QuantumRegister(10), \n",
+    "    alpha := ClassicalRegister(1, \"alpha\"),\n",
+    "    beta := ClassicalRegister(9, \"beta\"),\n",
     ")\n",
-    "print(\n",
-    "    f\"The associated PubResult of this Sampler job has the following DataBins:\\n {result[0].data}\\n\"\n",
-    ")\n",
-    "print(f\"It has a key-value pair dict: \\n{result[0].data.items()}\\n\")\n",
-    "print(\n",
-    "    f\"And the raw data can be converted to a bitstring-count format: \\n{result[0].data.meas.get_counts()}\"\n",
-    ")"
+    "circuit.h(0)\n",
+    "circuit.cx(range(0, 9), range(1, 10))\n",
+    "\n",
+    "# append measurements with the `measure_all` method\n",
+    "circuit.measure([0], alpha)\n",
+    "circuit.measure(range(1, 10), beta)\n",
+    "\n",
+    "# transpile the circuit\n",
+    "transpiled_circuit = pm.run(circuit)\n",
+    "\n",
+    "# run the Sampler job and retrieve the results\n",
+    "sampler = Sampler(mode=backend)\n",
+    "job = sampler.run([transpiled_circuit])\n",
+    "result = job.result()\n",
+    "\n",
+    "# the databin contains two BitArrays, one per register, and can be accessed\n",
+    "# as attributes using the registers' names\n",
+    "data = result[0].data\n",
+    "print(f\"BitArray for register 'alpha': {data.alpha}\")\n",
+    "print(f\"BitArray for register 'beta': {data.beta}\")\n",
+    "\n",
+    "print(f\"\\nCounts for register 'alpha': {data.alpha.get_counts()}\")\n",
+    "print(f\"\\nCounts for register 'beta': {data.beta.get_counts()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Leveraging `BitArray`s for performant post-processing\n",
+    "\n",
+    "Dictionaries of counts allow for a quick and convenient lookup of results. However, `BitArray`s store the sampled bitstrings in `Numpy` arrays, not in dictionaries. Since arrays generally offer better performance compared to dictionaries, it is advisable to perform any further post-processing directly on the `BitArray`s rather than on the counts.\n",
+    "\n",
+    "Every `BitArray` owns a two-dimensional array that stores the bitstrings as bytes (more precisely, as `numpy.uint8`s whose bits are the bitstrings that appear in the dictionary of counts). The left-most axis of said array runs over ordered shots, while the right-most axis runs over bytes (whose bits are the bitstrings that appear in the dictionary of counts). The following cell shows how to retrieve the array of bytes for the results obtained in the previous example, as well how to manipulate them as `Numpy` arrays:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"The shape of register `alpha` is {data.alpha.array.shape}.\")\n",
+    "print(f\"The bytes in register `alpha`, shot by shot:\\n{data.alpha.array}\\n\")\n",
+    "\n",
+    "print(f\"The shape of register `beta` is {data.beta.array.shape}.\")\n",
+    "print(f\"The bytes in register `beta`, shot by shot:\\n{data.beta.array}\\n\")\n",
+    "\n",
+    "# post-select the bitstrings of `beta` based on having sampled \"1\" in `alpha`\n",
+    "mask = data.alpha.array == \"0b1\"\n",
+    "ps_beta = data.beta[mask[:, 0]]\n",
+    "print(f\"The shape of `beta` after post-selection is {ps_beta.array.shape}.\")\n",
+    "print(f\"The bytes in `beta` after post-selection:\\n{ps_beta.array}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`BitArray` offers a wide range of built-in methods to perform some of the operations commonly performed during post-processing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get a slice of `beta` to retrieve the first three bits\n",
+    "beta_sl_bits = data.beta.slice_bits([0, 1, 2])\n",
+    "print(f\"The shape of `beta` after bit-wise slicing is {beta_sl_bits.array.shape}.\")\n",
+    "print(f\"The bytes in `beta` after bit-wise slicing:\\n{beta_sl_bits.array}\\n\")\n",
+    "\n",
+    "# get a slice of `beta` to retrieve the bytes of the first five shots\n",
+    "beta_sl_shots = data.beta.slice_shots([0, 1, 2, 3, 4])\n",
+    "print(f\"The shape of `beta` after shot-wise slicing is {beta_sl_shots.array.shape}.\")\n",
+    "print(f\"The bytes in `beta` after shot-wise slicing:\\n{beta_sl_shots.array}\\n\")\n",
+    "\n",
+    "# calculate the expectation value of diagonal operators on `beta`\n",
+    "ops = [\"ZZZZZZZZZ\", \"IIIIIIIIZ\"]\n",
+    "exp_vals = data.beta.expectation_values(ops)\n",
+    "for o, e in zip(ops, exp_vals):\n",
+    "    print(f\"Exp. val. for observable `{o}` is: {e}\")\n",
+    "\n",
+    "# concatenate the bitstrings in `alpha` and `beta` to \"merge\" the results of the two\n",
+    "# registers\n",
+    "merged_results = BitArray.concatenate_bits([data.alpha, data.beta])\n",
+    "print(f\"\\nThe shape of the merged results is {merged_results.array.shape}.\")\n",
+    "print(f\"The bytes of the merged results:\\n{merged_results.array}\\n\")"
    ]
   },
   {
